clusters/production/apps/stremio/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: production
spec:
  containers:
  - name: debug
    image: nicolaka/netshoot
    command:
      - sleep
      - "3600"
    securityContext:
      privileged: true  # Be careful with this in production
