clusters/production/apps/stremio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio-service
  namespace: production
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: stremio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: stremio-nodeport
  namespace: production
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: NodePort
  selector:
    app: stremio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
